--- a/src/components/Layout/AdminLayout/AdminHeader/style.scss
+++ b/src/components/Layout/AdminLayout/AdminHeader/style.scss
@@ -7,7 +7,7 @@
   align-items: center;
   justify-content: space-between;
   padding: 0 20px;
-
+  position: fixed;
   &__logo {
     img {
       height: 40px;
