--- a/src/components/Layout/AdminLayout/Sidebar/Sidebar.scss
+++ b/src/components/Layout/AdminLayout/Sidebar/Sidebar.scss
@@ -1,10 +1,12 @@
 // src/components/Sidebar.scss
 .sidebar {
-  width: 200px;
-  height: 93vh;
+  width: 12%;
+  height: 92.7vh;
+
   background-color: #0a3d62;
   color: white;
   padding-top: 20px;
+  margin-top: 50px;
   padding-left: 10px;
 
   &_Sul {
