--- a/src/assets/styles/ui.scss
+++ b/src/assets/styles/ui.scss
@@ -63,6 +63,7 @@ $color-layout:#011F2D;
         padding: 8px 12px;
         border: 1px solid #727785;
         cursor: pointer;
+        position: relative;
     }
 
     &_th {
