--- a/src/pages/Admin/component/AddLibrary/addLibrary.scss
+++ b/src/pages/Admin/component/AddLibrary/addLibrary.scss
@@ -69,6 +69,7 @@
   .book-list {
     display: flex;
     flex-wrap: wrap;
+    padding: 16px;
     justify-content: space-between;
 
     .book-card {
