--- a/src/pages/Admin/component/TestCreation/ModalTest/modalTest.scss
+++ b/src/pages/Admin/component/TestCreation/ModalTest/modalTest.scss
@@ -16,7 +16,7 @@
   background: white;
   padding: 20px;
   border-radius: 5px;
-  width: 400px;
+  width: 50%;
   height: 80vh;
   overflow-y: scroll;
   position: relative;
